# unibz

./: LICENSE  README.md
projects/era5_evaluation/: main.py  (+2 more)
projects/hydrological_forecasting/: README.md  pyproject.toml
projects/hydrological_forecasting/deprecated/: converting.ipynb  main.sh  process.py
projects/hydrological_forecasting/deprecated/historical/: bias_module_historical.R  process.py
projects/hydrological_forecasting/deprecated/notebooks/: check_steps.ipynb  comparison_biased.ipynb  comparison_unbiased.ipynb  extract_forecast.ipynb  extract_forecast_data.ipynb  extract_icon_d2_eps.ipynb  steps.ipynb  testing.ipynb
projects/hydrological_forecasting/deprecated/notebooks/observed/: createFullObservedData.ipynb  extract2daily_observed.ipynb  extract2forecastingRange_observed.ipynb  extract_fromDB_observed.ipynb
projects/hydrological_forecasting/deprecated/passirio/: dummy_output.csv
projects/hydrological_forecasting/deprecated/training/: input_data.json  main.json
projects/hydrological_forecasting/docker/bias/: Dockerfile.operative
projects/hydrological_forecasting/docker/ml/operative/: Dockerfile.dev  README.md  compose.yml
projects/hydrological_forecasting/etc/conf/bias/: input_taa.json  parameters.json
projects/hydrological_forecasting/lib/: database.py  locallib.py
projects/hydrological_forecasting/resources/: local_lib.py
projects/hydrological_forecasting/src/: converting.ipynb
projects/hydrological_forecasting/src/notebooks/: data_analysis.ipynb  insert_polygons.ipynb  streamflow_analysis.ipynb  tmp.ipynb
share/: timezone.md
(+570 files in other folders)
