[tool.poetry]
name = "hydrological-forecasting"
version = "0.1.0"
description = ""
authors = ["ftt01 <dallatorre.daniele@gmail.com>"]
readme = "README.md"
packages = [{include = "hydrological_forecasting"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
